--- a/index.html
+++ b/index.html
@@ -3,23 +3,24 @@
 <html lang="en">
 <head>
 <link rel="stylesheet" href="index.css">
+<link href="https://fonts.googleapis.com/css2?family=Chelsea+Market&family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
     <nav>
-      <a class='nav-buttons red' href="">Plan Your Visit</a>
-      <a class='nav-buttons blue' href="">Learn About the Park</a>
-      <a class='nav-buttons yellow' href="">Get Involved</a>
+      <a class='red' href="">Plan Your<br>Visit</a>
+      <a class='blue' href="">Learn About<br>the Park</a>
+      <a class='yellow' href="">Get<br>Involved</a>
     </nav>
   </header>
     <section class = 'hero'>
-      <div class = 'hero-image'>
-        <img src="header_img.jpg" alt="">
+      <div class = 'image'>
+        <img src="assets/header_img.jpg" alt="">
       </div>
-      <div class = 'hero-text'>
+      <div class = 'text'>
         <h1>Yosemite Park Guide</h1>
         <h2>Come explore California’s beautiful wilderness.</h2>
-        <h2>Always open. Reservations are not available or required to enter the park.</h2>
+        <p>Always open. Reservations are not available or required to enter the park.</p>
       </div>
     </section>
     <section class = 'highlighted'>
@@ -27,29 +28,28 @@
       <p>First protected in 1864, Yosemite National Park is best known for its waterfalls, but within its nearly 1,200 square miles, you can find deep valleys, grand meadows, ancient giant sequoias, a vast wilderness area, and much more.
       </p>
     </section>
-    <section class = 'stacked-hero'>
-      <div>
-        <div class ='v-hero-image'>
-          <img src="https://image.flaticon.com/icons/svg/2979/2979348.svg" alt="">
+    <section class = 'favicon'>
+      <div class = 'fire'>
+        <div class ='image-container'>
+          <img src="assets/fire-vector.png" alt="">
         </div>
-        <p>Fire is a natural and essential part of Yosemite. We manage fire carefully and study how it interacts with the park’s ecosystems. This blog provides updates about fires in Yosemite. Check for current fire restrictions.</p>
+        <p>Fire is a natural and essential part of Yosemite. We manage fire carefully and study how it interacts with the park’s ecosystems. This blog provides updates about fires in Yosemite. Check for<span class='bold'>current fire restrictions.</span> </p>
       </div>
-      <div>
-        <div class ='v-hero-image'>
-          <img src="https://image.flaticon.com/icons/svg/820/820374.svg" alt="">
+      <div class='camper'>
+        <div class ='image-container'>
+          <img src="assets/camper-vector.png" alt="">
         </div>
-        <p>We strongly recommend that you make reservations for lodging, camping, and backpacking. You can pay the park entrance fee upon arrival (there's no need to pay it in advance).
+        <p>We strongly recommend that you make reservations for lodging, camping, and backpacking. You can pay the <span class='bold'>park entrance fee</span> upon arrival (there's no need to pay it in advance).
         </p>
       </div>
     </section>
+    <section class="bg-image">
+    </section>
     <footer>
-      <div class = 'footer-image'>
-        <img src="footer_img.png" alt="">
-      </div>
       <nav>
-        <a class='nav-buttons red' href="">Plan Your Visit</a>
-        <a class='nav-buttons blue' href="">Learn About the Park</a>
-        <a class='nav-buttons yellow' href="">Get Involved</a>
+        <a class='red' href="">Plan Your<br>Visit</a>
+        <a class='blue' href="">Learn About<br>the Park</a>
+        <a class='yellow' href="">Get<br>Involved</a>
       </nav>
     </footer>
 </body>
